--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h3>Calculator</h3>
-	<form action="index.html" method="post">
+	<form action="/" method="post">
 		<input type="text" name="num1" placeholder="First Number">
 		<input type="text" name="num2" placeholder="Second Number">
 		<button type="submit" name="submit">Calculate</button>
